<package format="2">
  <name>astra_pro</name>
  <version>0.0.1</version>
  <description>
    <p>
      Contains a node publish data from the astra_pro camera
    </p>
  </description>
  <author>Christian Lienen</author>
  <maintainer email="christianlienen@gmail.com">Christian Lienen</maintainer>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
